# moai-fmod-studio

./: .gitignore  CMakeLists.txt  FMOD Studio Programmers API for iOS.chm  README.md  plugin.CMake
fmod/headers/: fmod_common.h  fmod_dsp.h  fmod_dsp_effects.h  fmod_errors.h
fmod/lib/osx/: libfmodL.dylib
fmod/lib/windows/: fmod64_vc.lib  fmodL64_vc.lib  fmodL_vc.lib  fmod_vc.lib
moai-fmod-studio/: CMakeLists.txt  MOAIFmodStudio.cpp  MOAIFmodStudio.h  MOAIFmodStudioChannel.cpp  MOAIFmodStudioChannel.h  MOAIFmodStudioSound.cpp  MOAIFmodStudioSound.h  host.cpp  host.h
sample/: main.lua
